<resources>
    <string name="app_name">Fefa Cinema</string>
    <string name="slogan">Book and enjoy with us</string>
    <string name="movies">Movies</string>
    <string name="now_playing">Now playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="popular">Popular</string>
    <string name="release_date">Release date:</string>
    <string name="landing_copywriting">Bringing Hollywood To You</string>
    <string name="sign_up_email">Sign Up with email</string>
    <string name="sign_up_facebook">Sign Up with Facebook</string>
    <string name="desc_story">Before she was Wonder Woman, she was Diana, princess of the Amazons, trained warrior. When
        a pilot crashes and tells of conflict in the outside world, she leaves home to fight a war, discovering her full
        powers and true destiny.
    </string>
    <string name="story_line">Story Line</string>
    <string name="grade_now">Grade Now</string>
    <string name="_10">/10</string>
    <string name="facebook_app_id">771628916545049</string>
    <string name="fb_login_protocol_scheme">fb771628916545049</string>
    <string name="server_client_id">268896658987-u839n446lrj2c3srkvc9nbrnhc8fl1sf.apps.googleusercontent.com</string>
    <string name="standard">STANDARD</string>
    <string name="hello">Hello</string>
    <string name="hello_name">Hello, %s</string>
    <string name="watched_movie">Watched Movie</string>
    <string name="saved_movie">Saved Movie</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="search">Search</string>
    <string name="hint_search">Keyword…</string>
    <string name="search_result">Search Result</string>
    <string name="search_results">%d result(s) for \"%s\"</string>
    <string name="recommendations">Recommendations</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
