<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

        <com.app.hcmut.movie.util.RoundImageView
                android:id="@+id/ivAuthentication"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:cornerRadius="50dp"
                app:roundedCorners="topLeft|topRight"
                android:src="@drawable/bg_movie"
                app:layout_constraintDimensionRatio="3:2"
                app:layout_constraintHeight_percent="0.3"
                app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCombined"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="@dimen/padding_small"
                android:src="@drawable/ic_logo_movie"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivAuthentication"/>


        <androidx.appcompat.widget.AppCompatTextView
                style="@style/Header"
                android:id="@+id/tvContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="23dp"
                android:textAlignment="center"
                android:text="@string/landing_copywriting"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivCombined"
                app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
                style="@style/ButtonDefault"
                android:id="@+id/btnSignUpEmail"
                android:backgroundTint="@color/red_google"
                android:layout_marginTop="16dp"
                android:layout_width="0dp"
                android:drawableStart="@drawable/ic_google_plus_symbol"
                android:paddingStart="16dp"
                android:paddingEnd="68dp"
                android:textColor="@color/white"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:text="@string/sign_up_email"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvContent"
                app:layout_constraintStart_toStartOf="@+id/btnSignUpFacebook"
                app:layout_constraintEnd_toEndOf="@+id/btnSignUpFacebook"/>

        <androidx.appcompat.widget.AppCompatButton
                style="@style/ButtonDefault"
                android:id="@+id/btnSignUpFacebook"
                android:backgroundTint="@color/blue"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:drawablePadding="16dp"
                android:drawableStart="@drawable/ic_fb"
                android:paddingStart="10dp"
                android:paddingEnd="42dp"
                android:textColor="@color/white"
                android:text="@string/sign_up_facebook"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btnSignUpEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
