<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/background_message"
        app:cardCornerRadius="@dimen/padding_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_message">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:textSize="@dimen/text_title"
                android:layout_width="wrap_content"
                android:includeFontPadding="true"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_normal"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Warning"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_goneMarginTop="@dimen/padding_normal"
                android:layout_marginTop="@dimen/padding_small"
                android:textColor="@color/black"
                android:textSize="@dimen/text_normal"
                android:layout_marginStart="@dimen/padding_small"
                android:layout_marginEnd="@dimen/padding_small"
                android:gravity="center"
                android:maxLines="4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/view"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                app:layout_constraintVertical_bias="0"
                tools:text="This contact has been saved
to your contact list."/>

        <View
                android:id="@+id/view"
                android:layout_height="1dp"
                android:background="@color/color_divider"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/padding_normal"
                app:layout_constraintTop_toBottomOf="@id/tvDescription"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOk"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:gravity="center"
                android:text="@string/ok"
                android:textSize="@dimen/text_large"
                android:textColor="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"/>

        <View
                android:id="@+id/view2"
                android:layout_width="0.1dp"
                android:layout_height="44dp"
                android:background="@color/color_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view"/>


        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvYes"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center" android:textColor="@color/blue"


                android:background="?android:attr/selectableItemBackground"
                android:text="@string/yes"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/no"
                android:textColor="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/view2"
                app:layout_constraintTop_toBottomOf="@+id/view"/>

        <androidx.constraintlayout.widget.Group
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="view2,tvNo,tvYes"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>