<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/clContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/ivVideo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toTopOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"/>

        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_big"
                android:src="@drawable/ic_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/ivPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_play"
                android:padding="@dimen/padding_large"
                app:layout_constraintTop_toTopOf="@id/ivVideo"
                app:layout_constraintBottom_toBottomOf="@id/ivVideo"
                app:layout_constraintStart_toStartOf="@id/ivVideo"
                app:layout_constraintEnd_toEndOf="@id/ivVideo"
        />
        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/ivPoster"
                android:layout_width="120dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:layout_marginStart="@dimen/padding_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/guideline2"
                app:layout_constraintBottom_toBottomOf="@id/guideline2"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="@dimen/padding_small"
                tools:text="Wonder Woman"
                android:textColor="@color/white"
                android:textSize="@dimen/text_title"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@id/ivPoster"
                app:layout_constraintStart_toEndOf="@id/ivPoster"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/padding_normal"
                app:layout_constraintHorizontal_bias="0.0"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvCate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                android:layout_marginEnd="@dimen/padding_small"
                tools:text="Wonder Woman"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintStart_toEndOf="@id/ivPoster"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/padding_normal"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvTagLine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Wonder Woman"
                android:layout_marginTop="@dimen/padding_small"
                android:layout_marginEnd="@dimen/padding_small"
                android:textColor="@color/white"
                android:textSize="@dimen/text_small"
                app:layout_constraintTop_toBottomOf="@id/tvCate"
                app:layout_constraintStart_toEndOf="@id/ivPoster"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/padding_normal"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvGrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade_now"
                android:textSize="@dimen/text_small"
                android:layout_marginTop="@dimen/padding_normal"
                app:layout_constraintStart_toStartOf="@id/ivPoster"
                android:textColor="@color/text_hint"
                app:layout_constraintTop_toBottomOf="@+id/ivPoster"/>

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/rbRating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:numStars="10"
                android:stepSize="0.1"
                android:layout_marginTop="@dimen/padding_small"
                app:mrb_fillBackgroundStars="true"
                app:mrb_progressTint="@color/yellow"
                app:mrb_progressBackgroundTint="@color/bg_star"
                app:mrb_secondaryProgressTint="@color/yellow"
                style="@style/Widget.MaterialRatingBar.RatingBar.Small"
                app:layout_constraintStart_toStartOf="@id/tvGrade"
                app:layout_constraintTop_toBottomOf="@id/tvGrade"
                app:layout_constraintEnd_toStartOf="@id/guideline3"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="8,5"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large"
                app:layout_constraintStart_toStartOf="@id/guideline3"
                app:layout_constraintEnd_toStartOf="@id/tv10"
                app:layout_constraintBottom_toBottomOf="@id/rbRating"
                app:layout_constraintHorizontal_chainStyle="packed"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_hint"
                android:text="@string/_10"
                android:textSize="@dimen/text_small"
                app:layout_constraintStart_toEndOf="@id/tvScore"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/rbRating"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvStoryLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/story_line"
                android:layout_marginTop="@dimen/padding_normal"
                app:layout_constraintStart_toStartOf="@id/ivPoster"
                android:textColor="@color/white"
                android:textSize="@dimen/text_large"
                app:layout_constraintTop_toBottomOf="@+id/rbRating"/>

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvDescStory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/desc_story"
                android:layout_marginTop="@dimen/padding_normal"
                android:textColor="@color/text_hint"
                android:textSize="@dimen/text_normal"
                app:layout_constraintStart_toStartOf="@id/ivPoster"
                app:layout_constraintTop_toBottomOf="@+id/tvStoryLine"
                app:layout_constraintEnd_toEndOf="parent"/>

        <android.support.design.widget.TabLayout
                android:id="@+id/tabLayout"
                android:layout_height="64dp"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/padding_small"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDescStory"
                app:tabBackground="@color/bg_toolbar"
                app:tabIndicator="@null"
                app:tabMode="fixed"
                style="@style/MyTabLayout"/>

        <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tabLayout"/>

        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline"
                app:layout_constraintGuide_percent="0.43"
                android:orientation="horizontal"/>
        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline2"
                app:layout_constraintGuide_percent="0.5"
                android:orientation="horizontal"/>
        <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline3"
                app:layout_constraintGuide_percent="0.8"
                android:orientation="vertical"/>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>