<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:fitsSystemWindows="true"
        android:id="@+id/corParentMotion"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context=".feature.movies.MoviesActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmallInverse"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:background="?android:attr/windowBackground"
                android:backgroundTint="@color/white"
                android:id="@+id/toolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:theme="@style/ThemeOverlay.MaterialComponents.Light"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:background="@color/bg_toolbar"
                    android:id="@+id/cslToolbar"
                    android:layout_height="64dp"
                    android:layout_width="match_parent"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                <ImageView
                        android:id="@+id/icDrawer"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:padding="@dimen/padding_button"
                        android:src="@drawable/ic_drawer"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription"/>

                <ImageView
                        android:id="@+id/icClose"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:padding="@dimen/padding_button"
                        android:src="@drawable/ic_close"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription"/>

                <androidx.appcompat.widget.AppCompatEditText
                        android:hint="@string/hint_search"
                        android:id="@+id/edtSearch"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/padding_normal"
                        android:layout_width="0dp"
                        android:maxLines="1"
                        android:textColor="@color/normal_text"
                        android:textColorHint="@color/sub_text"
                        android:textSize="@dimen/text_big"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tvSearch"
                        app:layout_constraintStart_toEndOf="@id/icClose"
                        app:layout_constraintTop_toTopOf="parent"
                        app:searchIcon="@drawable/ic_search_white"/>

                <TextView
                        android:fontFamily="@font/roboto_regular"
                        android:id="@+id/tvSearch"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/padding_normal"
                        android:layout_width="wrap_content"
                        android:text="@string/search"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_normal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                        android:fontFamily="@font/roboto_medium"
                        android:id="@+id/tvTitle"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/movies"
                        android:textColor="@color/normal_text"
                        android:textSize="@dimen/text_title_toolbar"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                        android:id="@+id/icSearch"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:padding="@dimen/padding_button"
                        android:src="@drawable/ic_search_white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription"/>

                <androidx.constraintlayout.widget.Group
                        android:id="@+id/groupSearch"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:visibility="gone"
                        app:constraint_referenced_ids="edtSearch, icClose, tvSearch"/>

                <androidx.constraintlayout.widget.Group
                        android:id="@+id/groupNormal"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:visibility="visible"
                        app:constraint_referenced_ids="icSearch, tvTitle, icDrawer"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_height="64dp"
                android:layout_width="match_parent"
                app:tabBackground="@color/bg_toolbar"
                app:tabIndicator="@null"
                app:tabMode="fixed"
                style="@style/MyTabLayout"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout android:layout_height="match_parent"
                  android:layout_width="match_parent"
                  android:orientation="vertical"
                  app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

